# rust-cli-agent

./: .env.example  .env.test  Cargo.toml  README.md  TESTING.md  install_path_linux.sh  install_path_windows.bat
.github/workflows/: ci.yml
scripts/: test.bat  test.sh
src/: config.rs  cost_tracker.rs  error.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  state.rs  tools.rs
src/agents/: coder.rs  mod.rs  planner.rs
src/llm/: claude.rs  deepseek.rs  gemini.rs  ollama.rs  openai.rs
tests/: llm_integration_tests.rs  orchestrator_tests.rs  tools_tests.rs
