[package]
name = "cli_coding_agent"
version = "1.0.0"
edition = "2021"
authors = ["Aravind V"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
chrono = "0.4"
walkdir = "2.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
serial_test = "3.0"
wiremock = "0.5"
test-log = "0.2"
